--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row icon-Items animated fadeInLeft">
             <div class="col l2 m3 s6 icon-Item-container center-align haederFont">
-                <a href="Favorites">
+                <a href="Item">
                     <div class="icon-Item center-align animated zoomIn"><img src="assets/resources/IMG/icons/009-star.png"/></div>
                 </a>
                 Item
