--- a/src/app/circular-modal/circular-modal.component.css
+++ b/src/app/circular-modal/circular-modal.component.css
@@ -1,5 +1,5 @@
 .ItemModal{
-    position: fixed; top: 0; width: 100%; height: 100vh; background: #fff; z-index: 999999999; display: none;
+    position: fixed; top: 0; width: 100%; height: 100vh; background: #fff; z-index: 88; display: none;
     overflow-y: scroll;
 }
 
