--- a/src/app/circular-modal/circular-modal.component.html
+++ b/src/app/circular-modal/circular-modal.component.html
@@ -147,4 +147,4 @@
     </div>
 </div>
 
-<app-item-categories-modal></app-item-categories-modal>
+<app-item-categories-modal [selectedItem]="selectedItem"></app-item-categories-modal>
