--- a/src/app/item-categories-modal/item-categories-modal.component.html
+++ b/src/app/item-categories-modal/item-categories-modal.component.html
@@ -4,30 +4,47 @@
     <div class="progress favLoader" id="favLoader" *ngIf="!CategoriesReady"><div class="indeterminate"></div></div>
     <div class="row"  style="padding: 20px 10px 10px 10px;"  *ngIf="CategoriesReady">
 
-      <div class="col s12">
+      <div class="col l5 m5 s12">
         <button class="btn waves-effect waves-green btn-flat blueBtn">Assign</button>
-        <button class="btn waves-effect waves-green">New</button>
+        <button class="btn waves-effect waves-green" (click)="openAddCategory()">New</button>
       </div>
+
+      <div class="addCategoryContainer animated fadeInDown">
+        <i class="material-icons right" (click)="closeAddCategory()">close</i><br/>
+        <fieldset>
+          <legend>Add Category</legend>
+          <div class="input-field col s12 modalInput">
+            <input type="text" [(ngModel)] = "categoryObject.categoryIcon" placeholder="Category icon"></div>
+          <div class="input-field col s12 modalInput">
+            <input type="text" [(ngModel)] = "categoryObject.name" placeholder="Name"></div>
+          <div class="input-field col s12 modalInput">
+            <input type="text" [(ngModel)] = "categoryObject.nominalCode" placeholder="Nominal code"></div>
+          <button class="btn waves-effect waves-green btn-flat blueBtn" (click)="addCategory()">Add</button>
+        </fieldset>
+      </div>
+
+
 
       <table id="categoriesTable" datatable [dtOptions]="{pagingType: 'full_numbers',displayLength: 4}"
              [dtTrigger]="dtTrigger" class="bordered striped centered">
         <thead><tr><th></th><th>Name</th><th>Description</th></tr></thead>
         <tbody>
         <tr *ngFor="let category of Categories; let i=index">
-          <td>
-              <p style="padding: 0; margin: 0;">
-                <input type="checkbox" id="category{{i}}"/>
+            <td>
+              <p style="padding: 0; margin: 0;" *ngIf="category.name">
+                <input type="checkbox" id="category{{i}}" [checked]="category.selected"
+                       (change)="category.selected = $event.target.checked;"/>
                 <label for="category{{i}}">select</label>
               </p>
-          </td>
-          <td>{{category.name}}</td>
-          <td>{{category.nominalCode}}</td>
+            </td>
+            <td>{{category.name}}</td>
+            <td>{{category.nominalCode}}</td>
         </tr>
         </tbody>
       </table>
     </div>
   </div>
   <div class="modal-footer">
-    <a class="modal-action modal-close waves-effect waves-green btn-flat canselBtn" (click)="cancelItemAddModal()">cancel</a>
+    <a class="modal-action waves-effect waves-green btn-flat canselBtn" (click)="cancelCategoriesModal()">cancel</a>
   </div>
 </div>
