send Api Requests for add, delete, update item and active or deactive item and add new category

--- a/src/app/circular-modal/circular-modal.component.html
+++ b/src/app/circular-modal/circular-modal.component.html
@@ -100,7 +100,7 @@
                   <a class="waves-effect waves-light btn"><i class="material-icons left">insert_chart</i> stats & analytics</a>
                   <p>
                     <input type="checkbox" class="filled-in" id="activeItem"
-                           [checked]="selectedItem.active" (change)="activeItem(selectedItem, $event)"/>
+                           [checked]="selectedItem.active" (change)="activeItem($event)"/>
                     <label for="activeItem">Active</label>
                   </p>
                 </div>
