--- a/src/app/item-categories-modal/item-categories-modal.component.html
+++ b/src/app/item-categories-modal/item-categories-modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal modal-fixed-footer CategoriesModal" style="top:-10%;">
   <div class="modal-header" style="background: #F5F5F5"><i class="material-icons left">dvr</i> Categories</div>
   <div class="modal-content">
-    <div class="progress favLoader" id="favLoader" *ngIf="!CategoriesReady"><div class="indeterminate"></div></div>
+    <div class="progress favLoader"  *ngIf="!CategoriesReady"><div class="indeterminate"></div></div>
     <div class="row"  style="padding: 20px 10px 10px 10px;"  *ngIf="CategoriesReady">
 
       <div class="col l5 m5 s12">
@@ -10,6 +10,8 @@
       </div>
 
       <div class="addCategoryContainer animated fadeInDown">
+        <div class="progress favLoader" *ngIf="addCategoriesReady"><div class="indeterminate"></div></div>
+
         <i class="material-icons right" (click)="closeAddCategory()">close</i><br/>
         <fieldset>
           <legend>Add Category</legend>
