Clean and deploy to firebase

--- a/src/app/circular-modal/circular-modal.component.html
+++ b/src/app/circular-modal/circular-modal.component.html
@@ -1,7 +1,6 @@
 <div id="openCircularModal" class="ItemModal animated zoomIn">
-  <i class="material-icons closeModalBtn right" style="right: 5px;" (click)="closeCircularModal()">highlight_off</i>
-
-  <div class="container">
+    <i class="material-icons closeModalBtn right" style="right: 5px;" (click)="closeCircularModal()">highlight_off</i>
+    <div class="container">
 
 
 
@@ -148,3 +147,4 @@
 </div>
 
 <app-item-categories-modal [selectedItem]="selectedItem"></app-item-categories-modal>
+<app-edit-item [selectedItem]="selectedItem"></app-edit-item>
